fixed display for top buttons on mobile

--- a/design-project.css
+++ b/design-project.css
@@ -89,3 +89,11 @@ h5 {
 .nav-text {
     font-size: .7rem;
 }
+
+.nr-margin-l {
+    margin-left: 3px;
+}
+
+.nr-margin-r {
+    margin-right: 3px;
+}
